IT for HanaCloudVectorStoreAutoConfiguration